<resources>
    <string name="app_name">FinalProject</string>
    <string name="toast_quizHelp">Quiz Help Selected!</string>
    <string name="toast_quizCreator">Quiz Creator Selected!</string>
    <string name="toast_quiz">Return to Main menu!</string>
    <string name="toast_quizMultiChoiceParser">The multi choice question is already exited in database!</string>
    <string name="toast_quizTFParser">The true false question is already exited in database!</string>
    <string name="toast_quizNumericParser">The numeric question is already exited in database!</string>
    <string name="quiz_creater">Quiz Creater</string>
    <string name="button_addQuestion">ADD</string>
    <string name="button_updateQuestion">UPDATE</string>
    <string name="quiz_dialog_message">Delete this question? Can\'t restore!</string>
    <string name="quiz_dialog_title">DELETE</string>
    <string name="quiz_viewpool">View Quiz Pool</string>
    <string name="quiz_import">Import Quiz From Website</string>
    <string name="quiz_stat">Statistics</string>
    <string name="quiz_pool_message">Which quesiton do you want to add?</string>
    <string name="quiz_multichoice">Multi Choice Question</string>
    <string name="quiz_truefalse">True/False Question</string>
    <string name="quiz_true">True</string>
    <string name="quiz_false">False</string>
    <string name="quiz_numeric">Numeric Question</string>
    <string name="quiz_help">Help</string>
    <string name="quiz_help_author">Author: Yali Fu</string>
    <string name="quiz_help_version">Verion: V1.0</string>
    <string name="quiz_help_instruction">Instruciton: This is a quiz creater APP. You can view the quiz pool,
                                            add, update and delete the questions. You can download a XML file
                                            from an http server to import pre-defined questions into the
                                            application. You can get statistics on the number of questions:
                                            Longest, Shortest, Average question length.</string>
    <string name="quiz_multichoice_dialog_message">Information Missing! No gaps!</string>
    <string name="quiz_pool_crtAns">Correct Answer is: </string>
    <string name="quiz_pool_question">Question:</string>
    <string name="quiz_pool_answerA">Answer A:</string>
    <string name="quiz_pool_answerB">Answer B:</string>
    <string name="quiz_pool_answerC">Answer C:</string>
    <string name="quiz_pool_answerD">Answer D:</string>
    <string name="quiz_pool_crtAns2">Correct \nAnswer:</string>
    <string name="quiz_pool_numeric">Digits should be rounded: </string>
    <string name="quiz_pool_numeric2">Digits\nshould be\nrounded: </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="button_return">RETURN</string>
  
  
  

    <string name="ButtonMovie">Movie Information</string>
    <string name="Favorite">What is your favorite moive?</string>
    <string name="ButtonQuiz">Multiple Choice Quiz Creater</string>
    <string name="Faveriate">What is your faveriate moive?</string>
    <string name="Button_Movie1">Life of Pi</string>
    <string name="Button_Movie2">Zootopia</string>
    <string name="button_addMovie">Add Movie</string>
    <string name="button_update">Update</string>
    <string name="popularMovie">Movie Information: </string>
    <string name="getMovieFromXML">Get movies from website</string> <string name="button_delete">Delete movie</string>
    <string name="rating">moving rating</string>
    <string name="movie_dialog_message">Delete this movie? Can\'t restore!</string>
    <string name="movie_dialog_title">DELETE</string>
    <string name="MovieTitle">Movie Title:</string>
    <string name="MainActors">Main Actors:</string>
    <string name="MovieLength">Movie Length:</string>
    <string name="MovieGenre">Movie Genre:</string>
    <string name="MovieDescription">Movie Description:</string>
    <string name="title_web">Movie Title:</string>
    <string name="actors_web">Main Actors:</string>
    <string name="length_web">Movie Length:</string>
    <string name="genre_web">Movie Type:</string>
    <string name="description_web">Movie Description:</string>
    <string name="rating_web">Rating level:</string>
    <string name="http_web">Web address:</string>
    <string name="movie_help_author">Author: Bo Zhu</string>
    <string name="movie_help_version">Verion: V1.0</string>
    <string name="movie_help_instruction">Instruciton: This is a movie info APP. You can view the movie list,
                                             add, update and delete the movie. You can download a XML file
                                             from an http server to import pre-defined questions into the
                                             application. You can get statistics highest, lowest, and average
                                              movie rating</string>
    <string name="statistic">Movie Statistic</string>
    <string name="help">Help</string>
    <string name="movie_all">Popular Movie Info</string>





    <string name="oc_title_toolbar">OC Transpo Info</string>
    <string name="oc_toast">OC Transpo Selected!</string>
    <string name="oc_dialog">About Selected!</string>
    <string name="oc_edit_text">Type Bus Route</string>
    <string name="oc_add">ADD</string>
    <string name="oc_textview">Bus Route Details</string>
    <string name="oc_button_delete">DELETE THIS ROUTE</string>
    <string name="oc_destination">Destination:</string>
    <string name="oc_start_time">Start Time:</string>
    <string name="oc_late_time">Late Time:</string>
    <string name="oc_latitude">Latitude:</string>
    <string name="oc_longitude">Longitude:</string>
    <string name="oc_gps">GPS Speed:</string>
    <string name="oc_about">ABOUT</string>
    <string name="oc_about_title">OC Transpo Information</string>
    <string name="oc_about_context1">Designed by Byeongyun Goo</string>
    <string name="oc_about_context2">Version 1.0</string>
    <string name="oc_about_context3">[Bus Route Information]</string>
    <string name="oc_about_context4">3017: Baseline</string>
    <string name="oc_about_context5">3050: BayShore</string>
    <string name="oc_about_context6">3058: Terry Fox</string>
    <string name="oc_about_context7">3014: Lincoln Field</string>
    <string name="oc_about_context8">3000: Mackenzie King</string>
    <string name="oc_about_ok">OK</string>







    <string name="hint_doctorOffice">Any previous surgeries, or allergies?</string>
    <string name="hint_dentist">Have had braces?</string>
    <string name="hint_optometrist">What date and from where?</string>
    <string name="hint_doctor_name">The Patient Name?</string>
    <string name="hint_doctor_address">The Patient address?</string>
    <string name="hint_doctor_birthday">The Patient birthday?</string>
    <string name="hint_doctor_phone">The Patient phone number?</string>
    <string name="hint_doctor_health_card_number">The Patient health card number?</string>
    <string name="add_patient">Add Patient</string>
    <string name="patient_add_btn">ADD</string>
    <string name="patient_help_btn">HELP</string>
    <string name="patient_add_doctor_btn">ADD DOCTOR</string>
    <string name="patient_add_dentist_btn">ADD DENTIST</string>
    <string name="patient_add_opt_btn">ADD OPT</string>
    <string name="patient_update_btn">UPDATE</string>
    <string name="patient_delete_btn">DELETE</string>
    <string name="patient_cancel_btn">CANCEL</string>
    <string name="patient_id_is">ID is : </string>
    <string name="patient_download_xml_file">download xml file</string>
    <string name="patient_view_statistics">view statistics</string>
    <string name="patient_create_update_delete">create update delete patients</string>
    <string name="title_activity_add_patient_toolbar">add_patient_toolbarActivity</string>
    <string name="patient_form">Patient form</string>




</resources>
