<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_ques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_pool_question"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/Question_truefalse_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_ques"
        android:layout_toEndOf="@+id/tv_ques" />

    <CheckBox
        android:id="@+id/AnswerA_truefalse_fragment"
        android:text="@string/quiz_true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_ques"/>
    <CheckBox
        android:id="@+id/AnswerB_truefalse_fragment"
        android:text="@string/quiz_false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AnswerA_truefalse_fragment"/>

    <Button
        android:id="@+id/add_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_addQuestion"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/update_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_updateQuestion"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/delete_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_dialog_title"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
