<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearlayout"

    tools:context="com.algonquin.finalgroupproject.MovieActivity">


    <TextView
        android:id="@+id/popularMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/popularMovie" />

    <!--<ImageButton-->
        <!--android:id="@+id/btn_movieList"-->
        <!--android:layout_width="120dp"-->
        <!--android:layout_height="120dp"-->
        <!--android:src="@drawable/m1"-->
        <!--android:layout_gravity="center_vertical|center_horizontal"-->
        <!--android:text="@string/button_Movie1"-->
        <!--tools:layout_editor_absoluteX="131dp"-->
        <!--tools:layout_editor_absoluteY="181dp" />-->
    <ImageView

        android:layout_width="180dp"
        android:layout_height="160dp"
        android:src="@drawable/m"
        android:layout_gravity="center_vertical|center_horizontal"/>

    <Button
        android:id="@+id/btn_movie_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/movie_all"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="181dp" />
    <Button
        android:id="@+id/btn_movieFromWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/getMovieFromXML"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="181dp" />

    <Button
        android:id="@+id/btn_movie_statistic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/statistic"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="181dp" />
    <Button
        android:id="@+id/btn_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/help"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="181dp" />
</LinearLayout>
