<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".octranspo.OCBusNumberWindow">


    <Button
        android:id="@+id/button"
        android:text="@string/oc_about"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        />


    <EditText
        android:id="@+id/editChat"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:hint="@string/oc_edit_text"
        android:textSize="10dp"
        android:layout_below="@id/button"




        />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/oc_add"
        android:layout_below="@id/editChat"



        />


    <ListView
        android:id="@+id/listViewChat"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_below="@+id/sendButton">

    </ListView>




    <FrameLayout
        android:id="@+id/FrameLayoutFL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/listViewChat">

    </FrameLayout>


</RelativeLayout>
